# finoss-cobol-intel

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml  tach.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: llm_policy.json
copybooks/: ACCTTMPL.cpy  CUSTMAST.cpy  CYCLEA.cpy  CYCLEB.cpy
docs/: API_GUIDE.md  ARCHITECTURE.md  ARTIFACT_EXAMPLE.md  DECISIONS.md  FINTECH_READINESS.md  OUTPUT_GALLERY.md  PARSER_EVALUATION.md  PLAN.md  PROGRESS.md  RESEARCH.md  SUITE_VISION.md
notebooks/: finetune_colab.ipynb
samples/: README.md
samples/complex/: acctval.cbl  cicsflow.cbl  filebatch.cbl  fileio.cbl  interest.cbl  linkdemo.cbl  payment.cbl  sqlops.cbl
samples/fixed_format/: calc.cbl  hello.cbl  recon.cbl
samples/free_format/: simple.cbl
samples/with_copybook/: customer.cbl  replacing_customer.cbl
src/cobol_intel/: __init__.py
src/cobol_intel/analysis/: __init__.py  call_graph.py  cfg_builder.py  data_flow.py  dead_code.py  impact_analyzer.py  reference_indexer.py  rules_extractor.py
src/cobol_intel/api/: __init__.py  app.py  constants.py  errors.py  models.py  security.py
src/cobol_intel/api/routers/: artifacts.py  health.py  runs.py
src/cobol_intel/cli/: __init__.py  main.py
src/cobol_intel/contracts/: __init__.py  ast_output.py  cfg_output.py  data_flow_output.py  dead_code_output.py  explanation_output.py  governance.py  graph_output.py  impact_output.py  manifest.py  reference_output.py  rules_output.py  run_id.py  run_metrics.py  source_ref.py
src/cobol_intel/core/: __init__.py
src/cobol_intel/llm/: __init__.py  backend.py  claude_backend.py  context_builder.py  explainer.py  local_backend.py  ollama_backend.py  openai_backend.py  policy.py
src/cobol_intel/outputs/: __init__.py  doc_generator.py  html_report.py  writers.py
src/cobol_intel/parsers/: __init__.py  antlr_parser.py  base.py  cobol.lark  lark_parser.py  preprocessor.py
src/cobol_intel/parsers/antlr_gen/: COBOL.g4  COBOL.interp  COBOLLexer.interp  COBOLLexer.py  COBOLLexer.tokens  COBOLListener.py  COBOLParser.py  COBOLVisitor.py  __init__.py
src/cobol_intel/service/: __init__.py  cache.py  doc_service.py  explain.py  governance.py  parallel.py  pipeline.py  run_metrics.py
tests/contract/: test_ast_output.py  test_cfg_output.py  test_data_flow_output.py  test_dead_code_output.py  test_error_codes.py  test_explanation_output.py  test_graph_output.py  test_impact_output.py  test_manifest.py  test_reference_output.py  test_rules_output.py  test_run_id.py  test_run_metrics.py
tests/corpus/: test_antlr4_poc.py  test_parser_poc.py  test_phase1_corpus_matrix.py
tests/evaluation/: test_benchmark.py  test_raw_vs_pipeline.py
tests/fixtures/expected/: complex_call_graph.json  fileio_ast.json  payment_rules.json
tests/integration/: test_api_runs.py  test_service_pipeline.py
tests/regression/: test_phase1_baselines.py
tests/unit/: test_api_models.py  test_api_security.py  test_backend_resilience.py  test_cache.py  test_cache_key.py  test_call_graph.py  test_cfg_builder.py  test_cli_main.py  test_context_builder.py  test_data_flow.py  test_dead_code.py  test_doc_generator.py  test_explain_service.py  test_explainer.py  test_governance_service.py  test_html_report.py  test_impact_analyzer.py  test_llm_policy.py  test_local_backend.py  test_openai_backend.py  test_parallel.py  test_parser_extensions.py  test_preprocessor.py  test_reference_indexer.py  test_rules_extractor.py
tools/: benchmark.py  dataset_builder.py  finetune.py
