[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cobol-intel"
version = "0.1.0"
description = "Open-source platform for understanding, documenting, and analyzing legacy COBOL codebases using static analysis and LLM"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["cobol", "legacy", "fintech", "static-analysis", "llm", "modernization"]

dependencies = [
    # Parsing
    "lark>=1.2.0",
    "antlr4-python3-runtime>=4.13.0",

    # Data modeling & validation
    "pydantic>=2.0.0",

    # Graph analysis
    "networkx>=3.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",

    # LLM backends
    "anthropic>=0.30.0",
    "openai>=1.0.0",
    "ollama>=0.2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "tach>=0.9.0",
    "jsonschema>=4.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
cobol-intel = "cobol_intel.cli.main:app"
cobol-intel-api = "cobol_intel.api.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cobol_intel"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -p no:cacheprovider"

[tool.coverage.run]
source = ["src/cobol_intel"]
